# gfslicer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
src/gridfinity_slicer/: __init__.py  cli.py  core.py  web.py
tests/: test_core.py  test_web.py
web/: index.html  slicer.js  stl.js
web/spike/: index.html  selftest.html
