[project]
name = "gridfinity-slicer"
version = "0.1.0"
description = "Cut exact 42mm GridFinity units out of a mesh and weld it back together"
authors = [
    { name = "Greg Cormier", email = "gcormier@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "trimesh[easy]>=4.4",
    "numpy>=1.26",
    "manifold3d>=2.5",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
gridfinity-slicer = "gridfinity_slicer.cli:main"
gridfinity-slicer-web = "gridfinity_slicer.web:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
